# DCL_BlocksLocalization

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  DCL_BlocksLocalizationConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/CannyFilter/: CMakeLists.txt  CannyFilter.cpp  CannyFilter.hpp
src/Components/ExtractColor/: CMakeLists.txt  ExtractColor.cpp  ExtractColor.hpp
src/Components/FindBlock/: CMakeLists.txt  FindBlock.cpp  FindBlock.hpp
src/Components/HoughTransform/: CMakeLists.txt  HoughTransform.cpp  HoughTransform.hpp
src/Components/SetHSV/: CMakeLists.txt  SetHSV.cpp  SetHSV.hpp
src/Types/: CMakeLists.txt  Drawable.hpp  DrawableContainer.hpp  MatrixTranslator.hpp  Segment.hpp  SegmentedImage.hpp
src/Types/Mrrocpp_Proxy/: BReading.hpp  CMakeLists.txt  Reading.hpp
src/Types/Mrrocpp_Proxy/xdr/: CMakeLists.txt
tasks/: BlockLocator.xml  BlockLocatorNoMrrocpp.xml  BlockLocatorTest.xml  CameraViewSave.xml
tasks/archives/: CameraViewSave.xml  ImgBlueBlock.xml  ImgGreenBlock.xml  ImgRedBlock.xml  ImgYellowBlock.xml  MovBlueBlock.xml  MovBlueBlockBackup.xml  MovBlueBlockMrrocpp.xml  MovGreenBlock.xml  MovGreenBlockMrrocpp.xml  MovRedBlock.xml  MovRedBlockMrrocpp.xml  MovYellowBlock.xml  MovYellowBlockMrrocpp.xml
